--- a/.github/workflows/dockerimage-main.yml
+++ b/.github/workflows/dockerimage-main.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   twitch-drops-miner:
     runs-on: ubuntu-latest
+    environment: docker
 
     steps:
       - name: Checkout repository
@@ -36,7 +37,7 @@ jobs:
       - name: Fetch version tags
         id: fetch_tags
         run: |
-          TDM_VERSION_TAG_V=$(curl -s https://api.github.com/repos/fireph/TwitchDropsMiner-Alpine/releases/latest | grep -oP '(?<="tag_name": ")[^"]*')
+          TDM_VERSION_TAG_V=$(curl -s https://api.github.com/repos/c0rrre/TwitchDropsMiner-Alpine/releases/latest | grep -oP '(?<="tag_name": ")[^"]*')
           TDM_VERSION_TAG="${TDM_VERSION_TAG_V#v}"
           echo "TDM_VERSION_TAG=${TDM_VERSION_TAG}" >> $GITHUB_ENV
 
@@ -46,7 +47,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/386
           push: true
-          tags: dungfu/twitch-drops-miner:latest
+          tags: c0rrre/twitch-drops-miner:latest
           build-args: |
             TDM_VERSION_TAG=${{ env.TDM_VERSION_TAG }}
           pull: true
