--- a/.github/workflows/dockerimage-main.yml
+++ b/.github/workflows/dockerimage-main.yml
@@ -52,3 +52,10 @@ jobs:
             TDM_VERSION_TAG=${{ env.TDM_VERSION_TAG }}
           pull: true
           no-cache: true
+
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v4
+        with:
+          username: ${{ secrets.DOCKER_NAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          repository: c0rrre/twitch-drops-miner
